results/SVCOMP/4-shot/log-assert6-2024_03_18_06_31_33.txt
import java.util.Random;

class assert6 {
    //@ ensures i >= 1000 ==> i >= 1000;
    //@ ensures !(i >= 1000) ==> true;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) if (!(i >= 1000)) assert false;
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures i >= 1000 ==> i >= 1000;
                ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: cannot find symbol
    //@ ensures i >= 1000 ==> i >= 1000;
                              ^
  symbol:   variable i
  location: class assert6
/home/max/Documents/JMLGPT/tmp/assert6.java:5: error: cannot find symbol
    //@ ensures !(i >= 1000) ==> true;
                  ^
  symbol:   variable i
  location: class assert6
3 errors

